--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Enimized by Zarby89</title>
+    <title>Enemizer by Zarby89</title>
   </head>
 
   <body>
     
-<p>Enimizer for zelda alttp</p>
+<p>Enemizer for zelda alttp</p>
 
-<p>Current Version : 2.5  - 25 April 2017</p>
+<p>Current Version : 2.6  - 25 April 2017</p>
 <p>Download Link : <a href="https://zarby89.github.io/Enimizer/Enimizer.rar">Download</a> </p>
 
   </body>
