--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     
 <p>Enemizer for zelda alttp</p>
 
-<p>Current Version : 2.10  - 1 May 2017</p>
-<p>Download Link : <a href="https://zarby89.github.io/Enimizer/Enimizer.rar">Download</a> </p>
+<p>Current Version : 4.9  - 30 May 2017</p>
+<p>Download Link : <a href="https://zarby89.github.io/Enimizer/Enemizer.rar">Download</a> </p>
 
   </body>
 </html>
