--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     
 <p>Enemizer for zelda alttp</p>
 
-<p>Current Version : 5.3  - 5 June 2017</p>
-<p>Download Link : <a href="https://cdn.discordapp.com/attachments/172411224657625088/321162313975595010/Enemizer.rar">Download</a> </p>
+<p>Current Version : 5.4  - 26 June 2017</p>
+<p>Download Link : <a href="https://cdn.discordapp.com/attachments/307877772825591809/329099116288147456/Enemizer_5.4.rar">Download</a> </p>
+Update note : <br>
+Palettes randomization on the overworld almost complete<br>
+Some possible softlock fixed<br>
+New Sprites
 
+ 
   </body>
 </html>
