--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 Update note : <br>
 Palettes randomization on the overworld almost complete<br>
 Some possible softlock fixed<br>
-New Sprites
+New Sprites<br>
 
+    <p>Github Link : <a href="https://github.com/Zarby89/Enimizer</a></p>
  
   </body>
 </html>
