--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Palettes randomization on the overworld almost complete<br>
 Some possible softlock fixed<br>
 New Sprites<br>
 
-    <p>Github Link : <a href="https://github.com/Zarby89/Enimizer>Github</a></p>
+    <p>Github Link : <a href="https://github.com/Zarby89/Enimizer">Github</a></p>
  
   </body>
 </html>
