--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@ Added random sprite option, Random color for link
 Removed the musics not looping in music randomization
 Fixed the infinite hole pot in Agahnim Tower
 New code for boss moving (asm) allow kholdstare to spawn in PoD and Gtower3
-Alots of New Sprites<br>
+<br>
+Alots of New Sprites
     <br>
     <br>
     <br>
-5.4 Changes : 
+Update note : (5.4)<br>
     
 Palettes randomization on the overworld almost complete<br>
 Some possible softlock fixed<br>
