--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     
 <p>Enemizer for zelda alttp</p>
 
-<p>Current Version : 5.5  - 15 July 2017</p>
-<p>Download Link : <a href="https://cdn.discordapp.com/attachments/172411224657625088/335804043165433867/Enemizer5.5.rar">Download</a> </p>
+<p>Current Version : 5.6  - 15 July 2017</p>
+<p>Download Link : <a href="https://cdn.discordapp.com/attachments/172411224657625088/335828972300533761/Enemizer5.6.rar">Download</a> </p>
+Update note : (5.6)<br>
+quick fix infinite patching problem
+    <br>
+    <br>
+    <br>
 Update note : (5.5)<br>
     
 Palettes randomization fixed for dungeons<br>
