--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     
 <p>Enemizer for zelda alttp</p>
 
-<p>Current Version : 5.6  - 15 July 2017</p>
-<p>Download Link : <a href="https://cdn.discordapp.com/attachments/172411224657625088/335828972300533761/Enemizer5.6.rar">Download</a> </p>
+<p>Current Version : 5.7  - 5 august 2017</p>
+<p>Download Link : <a href="https://cdn.discordapp.com/attachments/172411224657625088/343457959294140416/Enemizer5.7.rar">Download</a> </p>
+Update note : (5.7)<br>
+Keys fix in skull woods<br>
+Music crash fix<br>
+Trinexx solid ground fixed
+    <br>
+    <br>
+    <br>
 Update note : (5.6)<br>
 quick fix infinite patching problem
     <br>
