--- a/index.html
+++ b/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Enemizer by Zarby89</title>
+    <title>Enemizer by Zarby89 & Sosuke3</title>
   </head>
 
   <body>
     
 <p>Enemizer for zelda alttp</p>
-
-<p>Current Version : 5.7  - 5 august 2017</p>
-<p>Download Link : <a href="https://cdn.discordapp.com/attachments/172411224657625088/343457959294140416/Enemizer5.7.rar">Download</a> </p>
+<p>Current Version : 6.0 Beta - 17 october 2017</p>
+<p>Download Link : <a href="https://cdn.discordapp.com/attachments/307877772825591809/370020621746438144/Enemizer_6.0_Beta.zip">Download</a> </p>
+Update note : (6.0)<br>
+Almost the entire code has been rewrote by <a href="https://github.com/sosuke3/">Sosuke3</a><br>
+Fixed Palettes for the overworld<br>
+Fixed Palettes pits palette for dungeons<br>
+Added new Palettes Modes<br>
+Added Shield skins<br>
+Added Andy Mode<br>
+Removed Kodongo from randomization pool until it get fixed<br>
+Added health range for enemies *Can potentially cause softlock if setted on > +30<br>
+Added Random player sprite when you get hit your sprite change<br>
+Added Alternate Gfx Mode<br>
+Added Bootleg Magic Mode<br>
+Added Heart Beeping Speed<br>
+Added Bush/Grass enemies random<br>
+Added Boss shells / removed existing one<br>
+Fixed the shutter door in blind room<br>
+Fixed Stal "only" sprite<br>
+Added Mimic separated from the eyegore<br>
+Fixed boss drop to drop in the middle of the room (except Hera)<br>
+Fixed lots of minors stuff as well<br>
+Logic check as been updated to prevent softlock by <a href="https://github.com/sosuke3/">Sosuke3</a><br><br>
+Lots of changes/additions has been made by Sosuke3 thanks :)<br>
+Tons of new sprites added - Thanks alttp community ! <br>
+Update note : (5.7)<br>
+Keys fix in skull woods<br>
+Music crash fix<br>
+Trinexx solid ground fixed
+    <br>
+    <br>
+    <br>
+Update note : (5.6)<br>
+quick fix infinite patching problem
+    <br>
+    <br>
+    <br>
+Update note :  : 5.7  - 5 august 2017
 Update note : (5.7)<br>
 Keys fix in skull woods<br>
 Music crash fix<br>
