--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@ Fixed Stal "only" sprite<br>
 Added Mimic separated from the eyegore<br>
 Fixed boss drop to drop in the middle of the room (except Hera)<br>
 Fixed lots of minors stuff as well<br>
-Logic check as been updated to prevent softlock by <a href="https://github.com/sosuke3/">Sosuke3</a><br><br>
+Logic check as been updated to prevent softlock by <a href="https://github.com/sosuke3/">Sosuke3</a><br>
 Lots of changes/additions has been made by Sosuke3 thanks :)<br>
 Tons of new sprites added - Thanks alttp community ! <br>
+    <br>
+    <br>
+<br>
 Update note : (5.7)<br>
 Keys fix in skull woods<br>
 Music crash fix<br>
