--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0 Beta - 19 october 2017</p>
-<p>Download Link : <a href="https://cdn.discordapp.com/attachments/307877772825591809/370708923491024907/Enemizer_6.0_Beta.zip">Download</a> </p>
+<p>Current Version : 6.0 Beta 3 - 19 october 2017</p>
+<p>Download Link : <a href="https://cdn.discordapp.com/attachments/307877772825591809/370737780999061505/Enemizer_6.0_Beta_3.zip">Download</a> </p>
 Update note : (6.0)<br>
 Almost the entire code has been rewrote by <a href="https://github.com/sosuke3/">Sosuke3</a><br>
 Fixed Palettes for the overworld<br>
