--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0 Beta 3 - 19 october 2017</p>
-<p>Download Link : <a href="https://cdn.discordapp.com/attachments/307877772825591809/370737780999061505/Enemizer_6.0_Beta_3.zip">Download</a> </p>
-Update note : (6.0)<br>
+<p>Current Version : 6.0 Beta 6 - 24 october 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0-beta.6">Download</a> </p>
+Update note : (6.0.2-6.0.6 beta)<br>
+Created an installer<br>
+Moved config file to users appdata folder<br>
+Allow selection of output folder when generating a rom<br>
+Fixed various bugs related to unselected randomization options<br>
+Fixed various bugs with water rooms (some still remain, noteably pre-Arrghus)<br>
+Added new Enemy Damage options<br>
+Other bug fixes<br>
+<br>
+Update note : (6.0 beta)<br>
 Almost the entire code has been rewrote by <a href="https://github.com/sosuke3/">Sosuke3</a><br>
 Fixed Palettes for the overworld<br>
 Fixed Palettes pits palette for dungeons<br>
