--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0 Beta 7 - 24 october 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0-beta.7">Download</a> </p>
+<p>Current Version : 6.0 Beta 8 - 24 october 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0-beta.8">Download</a> </p>
+Update note : (6.0.8 beta)<br>
+Fixed Agahnim Alternative Graphics<br>
+Removed possible immovable sprites from pre-Agahnim room<br>
+<br>
 Update note : (6.0.7 beta)<br>
 Fixed health underflow when "chaos" enemy damage was selected<br>
 <br>
