--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0 Beta 8 - 24 october 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0-beta.8">Download</a> </p>
+<p>Current Version : 6.0 Beta 9 - 27 october 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0-beta.9">Download</a> </p>
+Update note : (6.0.9 beta)<br>
+Added MSU1 Support (Special thanks to qwertymodo for providing the xkas compatible source code)<br>
+Added uncompressed sword and shield graphics support. Old alternative shield graphics have been removed until they can be updated to the new format.<br>
+Switched to 7zip for bundled installer. This should fix issues with Avast not allowing the setup to run.<br>
+<br>
 Update note : (6.0.8 beta)<br>
 Fixed Agahnim Alternative Graphics<br>
 Removed possible immovable sprites from pre-Agahnim room<br>
