--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0 Beta 9 - 27 october 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0-beta.9">Download</a> </p>
+<p>Current Version : 6.0.10 - 30 october 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0.10">Download</a> </p>
+Update note : (6.0.10)<br>
+Fixed bugs with bush sprite graphics<br>
+Updated code to exclude rooms instead of including rooms into randomization (should fix caves that were not being randomized)<br>
+Removed flying enemies from list of "killable" enemies so they never get used in shutter rooms<br>
+Other misc fixes and code changes to allow easier debugging<br>
+<br>
 Update note : (6.0.9 beta)<br>
 Added MSU1 Support (Special thanks to qwertymodo for providing the xkas compatible source code)<br>
 Added uncompressed sword and shield graphics support. Old alternative shield graphics have been removed until they can be updated to the new format.<br>
