--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.10 - 30 october 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0.10">Download</a> </p>
+<p>Current Version : 6.0.11 - 30 october 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0.11">Download</a> </p>
+Update note : (6.0.11)<br>
+Fixed bug where config file from previous installation might cause errors if an alternate shield was selected.<br>
+<br>
 Update note : (6.0.10)<br>
 Fixed bugs with bush sprite graphics<br>
 Updated code to exclude rooms instead of including rooms into randomization (should fix caves that were not being randomized)<br>
