--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.11 - 30 october 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0.11">Download</a> </p>
+<p>Current Version : 6.0.12 - 4 November 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0.12">Download</a> </p>
+Update note : (6.0.12)<br>
+Fixed buggy room/ow area graphics.<br>
+Load sword/shield graphics from respective directory directory.<br>
+<br>
 Update note : (6.0.11)<br>
 Fixed bug where config file from previous installation might cause errors if an alternate shield was selected.<br>
 <br>
