--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.12 - 4 November 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0.12">Download</a> </p>
+<p>Current Version : 6.0.13 - 7 November 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0.13">Download</a> </p>
+Update note : (6.0.13)<br>
+Fixed OW graphics.<br>
+Fixed Big Fairy graphics.<br>
+Changed DM boulders back to vanilla behavior for now.<br>
+Removed excessive fish from OW.<br>
+Changed OW sprite code to allow moving sprites and expanding OW enemy count later. Shouldn't be any difference in play for now.<br>
+<br>
 Update note : (6.0.12)<br>
 Fixed buggy room/ow area graphics.<br>
 Load sword/shield graphics from respective directory directory.<br>
