--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.13 - 7 November 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0.13">Download</a> </p>
+<p>Current Version : 6.0.14 - 8 November 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enimizer/releases/tag/6.0.14">Download</a> </p>
+Update note : (6.0.14)<br>
+Fixed screwed up graph traversal for Boss Randomizer. Should now correctly check requirements for Arrghus, Kholdstare, and Trinexx when placing bosses.<br>
+<br>
 Update note : (6.0.13)<br>
 Fixed OW graphics.<br>
 Fixed Big Fairy graphics.<br>
