--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.14 - 8 November 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.14">Download</a> </p>
+<p>Current Version : 6.0.15 - 13 November 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.15">Download</a> </p>
+Update note : (6.0.15)<br>
+Fixed bug that caused Shuffle Enemy Damage Groups to be run even if Randomize Enemy Damage option was deselected.<br>
+Added bulk seed generation.<br>
+Removed barrier from Mimic Cave if Randomize Enemies is enabled.<br>
+<br>
 Update note : (6.0.14)<br>
 Fixed screwed up graph traversal for Boss Randomizer. Should now correctly check requirements for Arrghus, Kholdstare, and Trinexx when placing bosses.<br>
 <br>
