--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.15 - 13 November 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.15">Download</a> </p>
+<p>Current Version : 6.0.16 - 16 November 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.16">Download</a> </p>
+Update note : (6.0.16)<br>
+BeeMizer.<br>
+Fixed infinite loop when using Boss Randomizer with Glitched (OW or Major) rando seeds.<br>
+<br>
 Update note : (6.0.15)<br>
 Fixed bug that caused Shuffle Enemy Damage Groups to be run even if Randomize Enemy Damage option was deselected.<br>
 Added bulk seed generation.<br>
