--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.16 - 16 November 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.16">Download</a> </p>
+<p>Current Version : 6.0.17 - 19 November 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.17">Download</a> </p>
+Update note : (6.0.17)<br>
+Added new debug options.<br>
+Fixed graphics glitches for tile rooms, rock horder by DM entrance.<br>
+Removed wallmasters from OW and non-dungeon rooms.<br>
+<br>
 Update note : (6.0.16)<br>
 BeeMizer.<br>
 Fixed infinite loop when using Boss Randomizer with Glitched (OW or Major) rando seeds.<br>
