--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.17 - 19 November 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.17">Download</a> </p>
+<p>Current Version : 6.0.18 - 23 November 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.18">Download</a> </p>
+Update note : (6.0.18)<br>
+Added tile room trap randomizer.<br>
+Added tile room trap replacement tile "randomizer" (it's just spikes for now, and will make trinexx ice tile spikes), don't use this with OHKO.<br>
+Added ability to turn on OHKO (note: this will make clocks 0 if you use it on a timed-OHKO seed).<br>
+<br>
 Update note : (6.0.17)<br>
 Added new debug options.<br>
 Fixed graphics glitches for tile rooms, rock horder by DM entrance.<br>
