--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.18 - 23 November 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.18">Download</a> </p>
+<p>Current Version : 6.0.19 - 25 November 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.19">Download</a> </p>
+Update note : (6.0.19)<br>
+Fixed mimic arrow vulnerability.<br>
+Added setting to make thieves killable.<br>
+Modified UI for max enemy hp.<br>
+Changed enemy hp randomization to "Type".<br>
+Fixed "typo".<br>
+<br>
 Update note : (6.0.18)<br>
 Added tile room trap randomizer.<br>
 Added tile room trap replacement tile "randomizer" (it's just spikes for now, and will make trinexx ice tile spikes), don't use this with OHKO.<br>
