--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.19 - 25 November 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.19">Download</a> </p>
+<p>Current Version : 6.0.20 - 25 November 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.20">Download</a> </p>
+Update note : (6.0.20)<br>
+Stopped beamos (and other large immovables) from spawning in skull woods gibdo torch puzzle room.<br>
+<br>
 Update note : (6.0.19)<br>
 Fixed mimic arrow vulnerability.<br>
 Added setting to make thieves killable.<br>
