--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.20 - 25 November 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.20">Download</a> </p>
+<p>Current Version : 6.0.21 - 12 December 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.21">Download</a> </p>
+Update note : (6.0.21)<br>
+Set keese to not have keys <br>
+Added error logging to gui <br>
+Fixed debug mode bug in chaos boss randomizer<br>
+Added 10 second abort timer to basic/normal boss randomizer<br>
+Added some notes/updated packages<br>
+Added randomizer on hit flag/option<br>
+<br>
 Update note : (6.0.20)<br>
 Stopped beamos (and other large immovables) from spawning in skull woods gibdo torch puzzle room.<br>
 <br>
