--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.21 - 12 December 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.21">Download</a> </p>
+<p>Current Version : 6.0.22 - 17 December 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.22">Download</a> </p>
+Update note : (6.0.22)<br>
+Set keese to not have keys (really)<br>
+<br>
 Update note : (6.0.21)<br>
-Set keese to not have keys <br>
+<div style="text-decoration: line-through">Set keese to not have keys</div><br>
 Added error logging to gui <br>
 Fixed debug mode bug in chaos boss randomizer<br>
 Added 10 second abort timer to basic/normal boss randomizer<br>
