--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.22 - 17 December 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.22">Download</a> </p>
+<p>Current Version : 6.0.23 - 26 December 2017</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.23">Download</a> </p>
+Update note : (6.0.23)<br>
+Fixed vitreous key softlock<br>
+Fixed bugs in graph<br>
+Fixed error message display when trying to use a race rom or non-randomizer rom<br>
+<br>
 Update note : (6.0.22)<br>
 Set keese to not have keys (really)<br>
 <br>
