--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.23 - 26 December 2017</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.23">Download</a> </p>
+<p>Current Version : 6.0.24 - 13 January 2018</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.24">Download</a> </p>
+Update note : (6.0.24)<br>
+Added additional check for race roms<br>
+New system for custom boss graphics<br>
+New brightness increase option for palettes<br>
+<br>
 Update note : (6.0.23)<br>
 Fixed vitreous key softlock<br>
 Fixed bugs in graph<br>
