Updated version and notes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,28 @@
   <body>
     
 <p>Enemizer for zelda alttp</p>
-<p>Current Version : 6.0.25 - 14 January 2018</p>
-<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.25">Download</a> </p>
+<p>Current Version : 6.0.29 - 6 May 2018</p>
+<p>Download Link : <a href="https://github.com/Zarby89/Enemizer/releases/tag/6.0.29">Download</a> </p>
+Update note : (6.0.28)<br>
+Fixed retro mode compatibility<br>
+Updated included sprites<br>
+Updated alternative boss graphics and shield options<br>
+<br>
+Update note : (6.0.28)<br>
+<b>Note from this version up Enemizer will only work with v29+ randomizer roms</b><br>
+Added Zarby's new alternative boss graphics<br>
+<br>
+Update note : (6.0.27)<br>
+Updated Boss Randomizer to be able to handle new v29 ER roms. Note Enemizer will no longer work with pre-v29 ER roms.<br>
+Added ZSPR format support for sprites<br>
+Bug fixes<br>
+<br>
+Update note : (6.0.26)<br>
+Updated MSU1 code to latest version by qwertymodo<br>
+Added flag to mute SPC music for MSU1<br>
+Added Zarby's Agahnim Fun Mode<br>
+Fixed crash when trying to use a race rom or invalid rom file<br>
+<br>
 Update note : (6.0.25)<br>
 Added (spc) music mute option for use with MSU1 support<br>
 <br>
