Fixed github repo link at bottom of page

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ Some possible softlock fixed<br>
 New Sprites<br>
 
 
-    <p>Github Link : <a href="https://github.com/Zarby89/Enimizer">Github</a></p>
+    <p>Github Link : <a href="https://github.com/Zarby89/Enemizer">Github</a></p>
  
   </body>
 </html>
